<resources>
    <string name="app_name">Collage UCF</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_upload">Up-Load</string>
    <string name="title_collage">Collage</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_following">Following</string>
    <string name="menu_password_reset">Password Reset</string>
    <string name="menu_logout">Logout</string>
    <string name="login_page">Login Page</string>

    <!-- Unused because I changed the login activity to use app name since it determined
     the app name-->
    <string name="title_activity_login">Sign inF</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_photo">EditPhoto</string>

    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
