<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/library_icon"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/upload_icon"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_collage"
        android:icon="@drawable/collage_icon"
        android:title="@string/title_collage" />

</menu>

